fix intro and images spacing

--- a/lhl-final-project-master/client/src/App.css
+++ b/lhl-final-project-master/client/src/App.css
@@ -1,5 +1,5 @@
 .app {
   height: 100vh;
   width: 100vw;
-  background-color: #25274d;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
